update province and district name both dari and pashto

--- a/geonode/locale/ps/LC_MESSAGES/django.po
+++ b/geonode/locale/ps/LC_MESSAGES/django.po
@@ -7707,6 +7707,16 @@ msgstr ""
 #~ "the subject(space or comma-separated"
 #~ msgstr "موضوع ( فضا یا کوما جدا شوې ده"
 
+msgid "Afghanistan"
+msgstr "افغانستان"
+
+msgid "Select province"
+msgstr "ولایت وټاکئ"
+
+msgid "Select district"
+msgstr "ولسوالۍ وټاکئ"
+
+
  msgid "Publication"
  msgstr "نشره ول"
 
@@ -7972,3 +7982,1299 @@ msgstr ""
  msgstr "جمعــــــه     (مبــارک ورځ)"
 
  
+
+  msgid "publication"
+  msgstr "نشریه"
+
+  msgid "Badakhshan"
+  msgstr "بدخشان"
+
+  msgid "Uruzgan"
+  msgstr "اوروزگان"
+
+  msgid "Badghis"
+  msgstr "بادغيس "
+
+  msgid "Baghlan"
+  msgstr "بغلان "
+
+  msgid "Balkh"
+  msgstr "بلخ "
+
+  msgid "Bamyan"
+  msgstr "باميان "
+
+  msgid "Takhar"
+  msgstr "تخار "
+
+  msgid "Jawzjan"
+  msgstr "جوزجان "
+
+  msgid "Khost"
+  msgstr "خوست "
+
+  msgid "Daykundi"
+  msgstr "دايکندي "
+
+  msgid "Zabul"
+  msgstr "زابل "
+
+  msgid "Sar-e-Pul"
+  msgstr "سرپل"
+
+  msgid "Samangan"
+  msgstr "سمنگان "
+
+  msgid "Ghazni"
+  msgstr "غزنى "
+
+  msgid "Ghor"
+  msgstr "غور"
+
+  msgid "Farah"
+  msgstr "فراه "
+
+  msgid "Faryab"
+  msgstr "فارياب "
+
+  msgid "Paktya"
+  msgstr "پکتيا "
+
+  msgid "Paktika"
+  msgstr "پکتيکا "
+
+  msgid "Panjsher"
+  msgstr "پنجشير "
+
+  msgid "Parwan"
+  msgstr "پروان "
+
+  msgid "Kabul"
+  msgstr "کابل "
+
+  msgid "Kandahar"
+  msgstr "کندهار "
+
+  msgid "Kapisa"
+  msgstr "کاپيسا "
+
+  msgid "Kunar"
+  msgstr "کونړ "
+
+  msgid "Kunduz"
+  msgstr "کندز "
+
+  msgid "Laghman"
+  msgstr "لغمان "
+
+  msgid "Logar"
+  msgstr "لوگر "
+
+  msgid "Nangarhar"
+  msgstr "ننگرهار "
+
+  msgid "Nuristan"
+  msgstr "نورستان "
+
+  msgid "Nimroz"
+  msgstr "نيمروز "
+
+  msgid "Wardak"
+  msgstr "وردګ "
+
+  msgid "Hirat"
+  msgstr "هرات "
+
+  msgid "Hilmand"
+  msgstr "هلمند "
+
+  msgid "Temporal extent start"
+  msgstr "گستره زمانی شروع می شود"
+
+# Distric from Badakhshan
+  msgid "Arghanjkhwa"
+  msgstr "ارغنچخواه"
+
+  msgid "Argo"
+  msgstr "ارگو"
+
+  msgid "Baharak"
+  msgstr "بهارک"
+
+  msgid "Darayem"
+  msgstr "درایم"
+
+  msgid "Darwaz"
+  msgstr "درواز"
+
+  msgid "Darwaz-e-Balla"
+  msgstr "درواز بالا"
+
+  msgid "Eshkmesh"
+  msgstr "اشکاشم"
+
+  msgid "Jorm"
+  msgstr "جرم"
+
+  msgid "Keshem"
+  msgstr "کشم"
+
+  msgid "Khash"
+  msgstr "خاش"
+
+  msgid "Khwahan"
+  msgstr "خواهان"
+
+  msgid "Kofab"
+  msgstr "کوف آب"
+
+  msgid "Kohestan"
+  msgstr "کوهستان"
+
+  msgid "Koran wa Monjan"
+  msgstr "کران ومنجان"
+
+  msgid "Raghestan"
+  msgstr "راغستان"
+
+  msgid "Shahr-e-Buzorg"
+  msgstr "شهر بزرگ"
+
+  msgid "Shaki"
+  msgstr "شکی"
+
+  msgid "Shighnan"
+  msgstr "شغنان"
+
+  msgid "Shuhada"
+  msgstr "شهدا"
+
+  msgid "Tagab"
+  msgstr "تگاب"
+
+  msgid "Teshkan"
+  msgstr "تشکان"
+
+  msgid "Wakhan"
+  msgstr "واخان"
+
+  msgid "Warduj"
+  msgstr "وردوج"
+
+  msgid "Yaftal-e-Sufla"
+  msgstr "یفتل سفلی"
+
+  msgid "Yamgan"
+  msgstr "یمگان"
+
+  msgid "Yawan"
+  msgstr "یاوان"
+
+  msgid "Zebak"
+  msgstr "زیباک"
+
+# Distric Badghis
+  msgid "Qadis"
+  msgstr "قادیس"
+
+  msgid "Muqur"
+  msgstr "مقر"
+
+  msgid "Abkamari"
+  msgstr "آب کمری"
+
+  msgid "Jawand"
+  msgstr "جوند"
+
+  msgid "Balamurghab"
+  msgstr "بالا مرغاب"
+
+  msgid "Ghormach"
+  msgstr "غورماچ"
+
+  msgid "Qala-e-Naw"
+  msgstr "قلعه نو"
+
+# Distric Baghlan
+  msgid "Andarab"
+  msgstr "اندراب"
+
+  msgid "Baghlan-e-Jadid"
+  msgstr "بغلان جدید"
+
+  msgid "Burka"
+  msgstr "بورکه"
+
+  msgid "Dahana-e-Ghori"
+  msgstr "دهنۀ غوری"
+
+  msgid "Dehsalah"
+  msgstr "ده صلاح"
+
+  msgid "Doshi"
+  msgstr "دوشی"
+
+  msgid "Fereng Wa Gharu"
+  msgstr "فرنگ وغارو"
+
+  msgid "Guzargah-e- Nur"
+  msgstr "گذرگاه نور"
+
+  msgid "Khenjan"
+  msgstr "خنجان"
+
+  msgid "Khost Wa Fereng"
+  msgstr "خوست و فرنگ"
+
+  msgid "Khwajahejran"
+  msgstr "خواجه هجران"
+
+  msgid "Nahrin"
+  msgstr "نهرین"
+
+  msgid "Pul-e-Hesar"
+  msgstr "پل حصار"
+
+  msgid "Pul-e- khumri"
+  msgstr "پلخمری"
+
+  msgid "Tala Wa barfak"
+  msgstr "تاله وبرفک"
+
+# Distric Balkh
+  msgid "Charbulak"
+  msgstr "چار بولک"
+
+  msgid "Charkent"
+  msgstr "چار کنت"
+
+  msgid "Chemtal"
+  msgstr "چمتال"
+
+  msgid "Dawlatabad"
+  msgstr "دولت آباد"
+
+  msgid "Dehdadi"
+  msgstr "دهدادی"
+
+  msgid "Kaldar"
+  msgstr "کلدار"
+
+  msgid "Keshendeh"
+  msgstr "کشنده"
+
+  msgid "Khulm"
+  msgstr "خلم"
+
+  msgid "Marmul"
+  msgstr "مارمُل"
+
+  msgid "Mazar-e-Sharif"
+  msgstr "مزار شریف"
+
+  msgid "Nahr-e- Shahi"
+  msgstr "نهر شاهی"
+
+  msgid "Sharak-e-Hayratan"
+  msgstr "شهرک حیرتان"
+
+  msgid "Sholgareh"
+  msgstr "شولگره"
+
+  msgid "Shortepa"
+  msgstr "شور تیپه"
+
+  msgid "Zari"
+  msgstr "زاری"
+
+# Distric Bamyan
+  msgid "Shibar"
+  msgstr "شیبر"
+
+  msgid "Panjab"
+  msgstr "پنجاب"
+
+  msgid "Waras"
+  msgstr "ورث"
+
+  msgid "Sayghan"
+  msgstr "سیغان"
+
+  msgid "Kahmard"
+  msgstr "کهمرد"
+
+  msgid "Yakawlang"
+  msgstr "یکاولنگ"
+
+# Distric Daykundi
+  msgid "Shahrestan"
+  msgstr "شهرستان"
+
+  msgid "Ashtarlay"
+  msgstr "اشترلی"
+
+  msgid "kiti"
+  msgstr "کیتی"
+
+  msgid "Patoo"
+  msgstr "پاتو"
+
+  msgid "Miramor"
+  msgstr "میرامور"
+
+  msgid "Nili"
+  msgstr "نیلی"
+
+  msgid "Khadir"
+  msgstr "خدیر"
+
+  msgid "Sang-e-Takht"
+  msgstr "سنگ تخت"
+
+  msgid "Kajran"
+  msgstr "کجران"
+
+  msgid "Gizab"
+  msgstr "گیزاب"
+
+# Distric Farah
+  msgid "Anardara"
+  msgstr "انار دره"
+
+  msgid "Bakwa"
+  msgstr "بکواه"
+
+  msgid "Balabuluk"
+  msgstr "بالا بلوک"
+
+  msgid "Gulestan"
+  msgstr "گلستان"
+
+  msgid "Khak-e-Safed"
+  msgstr "خاک سفید"
+
+  msgid "Lash-e-Juwayn"
+  msgstr "لاش جوین"
+
+  msgid "Purchaman"
+  msgstr "پُرچمن"
+
+  msgid "Pushtrod"
+  msgstr "پشترود"
+
+  msgid "Qala-e-Kah"
+  msgstr "قلعه کاه"
+
+  msgid "Shibkoh"
+  msgstr "شیب کوه"
+
+# Distric Farayab
+  msgid "Almar"
+  msgstr "المار"
+
+  msgid "Andkhoy"
+  msgstr "اندخوی"
+
+  msgid "Bilcheragh"
+  msgstr "بلچراغ"
+
+  msgid "Dawlat Abad"
+  msgstr "دولت آباد"
+
+  msgid "Garziwan"
+  msgstr "گرزیوان"
+
+  msgid "Khan-e-Char Bagh"
+  msgstr "خان چارباغ"
+
+  msgid "Khwajasabzposh"
+  msgstr "خواجه سبزپوش"
+
+  msgid "Kohistan"
+  msgstr "کوهستان"
+
+  msgid "Maymana"
+  msgstr "میمنه"
+
+  msgid "Pashtunkot"
+  msgstr "پشتون کوټ"
+
+  msgid "Qaramqol"
+  msgstr "قرم قل"
+
+  msgid "Qaysar"
+  msgstr "قیصار"
+
+  msgid "Qorghan"
+  msgstr "قرغان"
+
+  msgid "Shirintagab"
+  msgstr "شیرین تگاب"
+
+# Distric Ghazni
+  msgid "Abband"
+  msgstr "آب بند"
+
+  msgid "Ajrestan"
+  msgstr "اجرستان"
+
+  msgid "Andar"
+  msgstr "اندړ"
+
+  msgid "Dehyak"
+  msgstr "ده یک"
+
+  msgid "Gelan"
+  msgstr "گیلان"
+
+  msgid "Giro"
+  msgstr "گیرو"
+
+  msgid "Jaghatu"
+  msgstr "جغتو"
+
+  msgid "Jaghuri"
+  msgstr "جاغوری"
+
+  msgid "Khwajaumari"
+  msgstr "خواجه عمری"
+
+  msgid "Malestan"
+  msgstr "مالستان"
+
+  msgid "Nawa"
+  msgstr "ناوه"
+
+  msgid "Nawur"
+  msgstr "ناور"
+
+  msgid "Qarabagh"
+  msgstr "قره باغ"
+
+  msgid "Rashidan"
+  msgstr "رشیدان"
+
+  msgid "Waghaz"
+  msgstr "واغظ"
+
+  msgid "Walimuhammad-e- Shahid"
+  msgstr "ولی محمد شهید"
+
+  msgid "Zanakhan"
+  msgstr "زنه خان"
+
+# Distric  Ghor
+  msgid "Chaghcharan"
+  msgstr "چغچاران"
+
+  msgid "Charsadra"
+  msgstr "چار صد ره"
+
+  msgid "Dawlatyar"
+  msgstr "دولت یار"
+
+  msgid "DoLayna"
+  msgstr "دو لینه"
+
+  msgid "Feroz Koh"
+  msgstr "فیروزکوه"
+
+  msgid "Lal Wa Sarjangal"
+  msgstr "لعل و سرجنگل"
+
+  msgid "Pasaband"
+  msgstr "پسابند"
+
+  msgid "Saghar"
+  msgstr "ساغر"
+
+  msgid "Shahrak"
+  msgstr "شهرک"
+
+  msgid "Taywarah"
+  msgstr "تیوره"
+
+  msgid "Tolak"
+  msgstr "تولک"
+
+# Distric Hilmand
+  msgid "Baghran"
+  msgstr "باغران "
+
+  msgid "Deh-e-shu"
+  msgstr "دیشو"
+
+  msgid "Garmser"
+  msgstr "گرم سیر"
+
+  msgid "Kajaki"
+  msgstr "کجکی"
+
+  msgid "Lashkargah"
+  msgstr "لشکرگاه"
+
+  msgid "Musa Qala"
+  msgstr "موسی قلعه"
+
+  msgid "Nad-e-Ali"
+  msgstr "نادعلی"
+
+  msgid "Nahr-e-Saraj"
+  msgstr "نهر سراج"
+
+  msgid "Nawa-e-Barakzaiy"
+  msgstr "ناوه بارکزائی"
+
+  msgid "Nawzad"
+  msgstr "نوزاد"
+
+  msgid "Reg"
+  msgstr "ریگ"
+
+  msgid "Sangin"
+  msgstr "سنگین"
+
+  msgid "Washer"
+  msgstr "واشیر"
+
+  msgid "Musaqalah"
+  msgstr "موسه قلعه"
+
+# Distric herat
+  msgid "Adraskan"
+  msgstr "ادرسکن"
+
+  msgid "Chisht-e-Sharif"
+  msgstr "چشت شریف"
+
+  msgid "Farsi"
+  msgstr "فرسی"
+
+  msgid "Ghoryan"
+  msgstr "غوریان"
+
+  msgid "Gulran"
+  msgstr "گلران"
+
+  msgid "Guzara"
+  msgstr "گذره"
+
+  msgid "Herat"
+  msgstr "هرات"
+
+  msgid "Injil"
+  msgstr "انجیل"
+
+  msgid "Karukh"
+  msgstr "کرُخ"
+
+  msgid "Kohsan"
+  msgstr "کوهسان"
+
+  msgid "Kushk"
+  msgstr "کُشک"
+
+  msgid "Kushk-e-Kohna"
+  msgstr "کُشک کهنه"
+
+  msgid "Obe"
+  msgstr "اوبی"
+
+  msgid "Pashtunzarghun"
+  msgstr "پشتون زرغون"
+
+  msgid "Shindand"
+  msgstr "شیندند"
+
+  msgid "Zindajan"
+  msgstr "زنده جان"
+
+  msgid "Aqcha"
+  msgstr "آقچه"
+
+  msgid "Darzab"
+  msgstr "درز آب"
+
+  msgid "Fayzabad"
+  msgstr "فیض آباد"
+
+  msgid "Khamyab"
+  msgstr "خمیاب"
+
+  msgid "Khanaqa"
+  msgstr "خانقا"
+
+  msgid "Khwajadukoh"
+  msgstr "خواجه دوکوه"
+
+  msgid "Mardyan"
+  msgstr "مردیان"
+
+  msgid "Mingajik"
+  msgstr "منگجک"
+
+  msgid "Qarqin"
+  msgstr "قرقین"
+
+  msgid "Qushtepa"
+  msgstr "قوش تیپه"
+
+  msgid "Shiberghan"
+  msgstr "شبرغان"
+
+# Distric Kabul
+  msgid "Bagrami"
+  msgstr "بگرامی"
+
+  msgid "Chaharasyab"
+  msgstr "چهار آسیاب"
+
+  msgid "Dehsabz"
+  msgstr "ده سبز"
+
+  msgid "Estalef"
+  msgstr "استالف"
+
+  msgid "Farza"
+  msgstr "فرزه"
+
+  msgid "Guldara"
+  msgstr "گلدره"
+
+  msgid "Kalakan"
+  msgstr "کلکان"
+
+  msgid "Khak-e- Jabbar"
+  msgstr "خاک جبار"
+
+  msgid "Mirbachakot"
+  msgstr "میر بچه کوت"
+
+  msgid "Musayi"
+  msgstr "موسهی"
+
+  msgid "Paghman"
+  msgstr "پغمان"
+
+  msgid "Shakardara"
+  msgstr "شکردره"
+
+  msgid "Surobi"
+  msgstr "سروبی"
+
+# Distric Kandahar
+  msgid "Arghandab"
+  msgstr "ارغنداب"
+
+  msgid "Arghestan"
+  msgstr "ارغستان"
+
+  msgid "Daman"
+  msgstr "دامان"
+
+  msgid "Ghorak"
+  msgstr "غورک"
+
+  msgid "Khakrez"
+  msgstr "خاکریز"
+
+  msgid "Maruf"
+  msgstr "معروف"
+
+  msgid "Maywand"
+  msgstr "میوند"
+
+  msgid "Miyanshin"
+  msgstr "میانشین"
+
+  msgid "Nesh"
+  msgstr "نیش"
+
+  msgid "Panjwayi"
+  msgstr "پنجوائی"
+
+  msgid "Shahwalikot"
+  msgstr "شاه ولی کوت"
+
+  msgid "Shorabak"
+  msgstr "شور آبک"
+
+  msgid "Spinboldak"
+  msgstr "سپین بولدک"
+
+  msgid "Zheray"
+  msgstr "ژړۍ"
+
+# Distric Kapisa
+  msgid "Alasay"
+  msgstr "اله سای"
+
+  msgid "Hisa-e- Awal-e- Kohestan"
+  msgstr "حصه اول کوهستان"
+
+  msgid "Hisa-e- Duwum-e- Kohestan"
+  msgstr "حصه دوم کوهستان"
+
+  msgid "Kohband"
+  msgstr "کوه بند"
+
+  msgid "Mahmud-e- Raqi"
+  msgstr "محمود راقی"
+
+  msgid "Nejrab"
+  msgstr "نجراب"
+
+# Distric Khost
+  msgid "Bak"
+  msgstr "باک"
+
+  msgid "Gurbuz"
+  msgstr "گربز"
+
+  msgid "Jajimaydan"
+  msgstr "جاجی میدان"
+
+  msgid "Mandozayi"
+  msgstr "مندوزائی"
+
+  msgid "Khost(Matun)"
+  msgstr "خوست (متون)"
+
+  msgid "Musakhel"
+  msgstr "موسی خیل"
+
+  msgid "Nadirshahkot"
+  msgstr "نادرشاه کوت"
+
+  msgid "Qalandar"
+  msgstr "قلندر"
+
+  msgid "Sabari"
+  msgstr "صبری"
+
+  msgid "Shamal"
+  msgstr "شمل"
+
+  msgid "Spera"
+  msgstr "سپیره"
+
+  msgid "Tani"
+  msgstr "تنی"
+
+  msgid "Terezayi"
+  msgstr "تری زائی"
+
+# Distric Kunar
+  msgid "Asadabad"
+  msgstr "اسد آباد"
+
+  msgid "Barkunar"
+  msgstr "برکنر"
+
+  msgid "Chapadara"
+  msgstr "چپه دره"
+
+  msgid "Chawkay"
+  msgstr "چوکی"
+
+  msgid "Dangam"
+  msgstr "دانگام"
+
+  msgid "Dara-e-Pech"
+  msgstr "دره پیچ"
+
+  msgid "Ghaziabad"
+  msgstr "غازی آباد"
+
+  msgid "Khaskunar"
+  msgstr "خاص کنر"
+
+  msgid "Marawara"
+  msgstr "مروره"
+
+  msgid "Narang"
+  msgstr "نرنگ"
+
+  msgid "Nari"
+  msgstr "ناړی"
+
+  msgid "Nurgal"
+  msgstr "نورگل"
+
+  msgid "Sarkani"
+  msgstr "سرکانی"
+
+  msgid "Shigal Wa sheltan"
+  msgstr "شیگل وشلتن"
+
+  msgid "Watapur"
+  msgstr "وته پور"
+
+# Distric Kunduz
+  msgid "Aliabad"
+  msgstr "علی آباد"
+
+  msgid "Chardarah"
+  msgstr "چهار دره"
+
+  msgid "Dasht-e-Archi"
+  msgstr "دشت ارچی"
+
+  msgid "Emamsaheb"
+  msgstr "امام صاحب"
+
+  msgid "Khanabad"
+  msgstr "خان آباد"
+
+  msgid "Qala-e-Zal"
+  msgstr "قلعه ذال"
+
+# Distric Laghman
+  msgid "Alingar"
+  msgstr "علینگار"
+
+  msgid "Alishang"
+  msgstr "علیشنگ"
+
+  msgid "Dawlatshah"
+  msgstr "دولت شاه"
+
+  msgid "Mehtarlam"
+  msgstr "مهتر لام"
+
+  msgid "Qarghayi"
+  msgstr "قرغه ئی"
+
+# Distric Logar
+  msgid "Azra"
+  msgstr "ازره"
+
+  msgid "Barakibarak"
+  msgstr "برکی برک"
+
+  msgid "Charkh"
+  msgstr "چرخ"
+
+  msgid "Kharwar"
+  msgstr "خروار"
+
+  msgid "Khoshi"
+  msgstr "خوشی"
+
+  msgid "Mohammadagha"
+  msgstr "محمدآغه"
+
+  msgid "Pul-e- Alam"
+  msgstr "پل علم"
+
+# Distric Nangarhar
+  msgid "Achin"
+  msgstr "اچین"
+
+  msgid "Batikot"
+  msgstr "بتی کوټ"
+
+  msgid "Behsud"
+  msgstr "بهسود"
+
+  msgid "Chaparhar"
+  msgstr "چپر هار"
+
+  msgid "Dara-e-Nur"
+  msgstr "دره نور"
+
+  msgid "Dehbala"
+  msgstr "ده بالا"
+
+  msgid "Durbaba"
+  msgstr "دُر بابا"
+
+  msgid "Goshta"
+  msgstr "گوشته"
+
+  msgid "Hesarak"
+  msgstr "حصارک"
+
+  msgid "Jalalabad"
+  msgstr "جلال آباد"
+
+  msgid "Kama"
+  msgstr "کامه"
+
+  msgid "Khogyani"
+  msgstr "خوگیانی"
+
+  msgid "Kot"
+  msgstr "کوټ"
+
+  msgid "Kuzkunar"
+  msgstr "کوز کنر"
+
+  msgid "Lalpur"
+  msgstr "لعل پور"
+
+  msgid "Muhmand Dara"
+  msgstr "مهمند دره"
+
+  msgid "Nazyan"
+  msgstr "نازیان"
+
+  msgid "Pachieragam"
+  msgstr "پچیراگام"
+
+  msgid "Rodat"
+  msgstr "رودات"
+
+  msgid "Sherzad"
+  msgstr "شیرزاد"
+
+  msgid "Shinwar"
+  msgstr "شینوار"
+
+  msgid "Surkhrod"
+  msgstr "سرخ رود"
+
+# Distric Nimroz
+  msgid "Chakhansur"
+  msgstr "چخانسور"
+
+  msgid "Charburjak"
+  msgstr "چاربرجک"
+
+  msgid "Kang"
+  msgstr "کنگ"
+
+  msgid "Khashrod"
+  msgstr "خاش رود"
+
+  msgid "Zaranj"
+  msgstr "زرنج"
+
+# Distric Nuristan
+  msgid "Barg-e- Matal"
+  msgstr "برگ متال"
+
+  msgid "Duab"
+  msgstr "دو آب"
+
+  msgid "Kamdesh"
+  msgstr "کامدیش"
+
+  msgid "Mandol"
+  msgstr "مندول"
+
+  msgid "Nurgeram"
+  msgstr "نورگرام"
+
+  msgid "Poruns"
+  msgstr "پرونس"
+
+  msgid "Wama"
+  msgstr "واما"
+
+  msgid "Waygal"
+  msgstr "وایگل"
+
+# Distric Paktika
+  msgid "Bermel"
+  msgstr "برمل"
+
+  msgid "Dila"
+  msgstr "دیله"
+
+  msgid "Gyan"
+  msgstr "گیان"
+
+  msgid "Gomal"
+  msgstr "گومل"
+
+  msgid "Janikhel"
+  msgstr "جانی خیل"
+
+  msgid "Matakhan"
+  msgstr "متاخان"
+
+  msgid "Naka"
+  msgstr "نیکه"
+
+  msgid "Omna"
+  msgstr "اومنه"
+
+  msgid "Sarrawzah(Sarhawzah)"
+  msgstr "سرروضه (سرحوضه)"
+
+  msgid "Sarobi"
+  msgstr "سروبی"
+
+  msgid "Sharan"
+  msgstr "شرن"
+
+  msgid "Turwo (Tarwe)"
+  msgstr "تروو"
+
+  msgid "Urgun"
+  msgstr "ارگون"
+
+  msgid "Wazakhah"
+  msgstr "وازه خواه"
+
+  msgid "Wormamay"
+  msgstr "وړ ممی"
+
+  msgid "Yahyakhel"
+  msgstr "یحی خیل"
+
+  msgid "Yosufkhel"
+  msgstr "یوسف خیل"
+
+  msgid "Zarghunshahr"
+  msgstr "زرغون شهر"
+
+  msgid "Ziruk"
+  msgstr "زیړوک"
+
+# Distric Paktya
+  msgid "Ahmadaba"
+  msgstr "احمد آبا"
+
+  msgid "Alikhel (Jaji)"
+  msgstr "علی خیل"
+
+  msgid "Chamkani"
+  msgstr "څمکنی"
+
+  msgid "Dand wa Patan"
+  msgstr "دند وپټان"
+
+  msgid "Gardez"
+  msgstr "گردیز"
+
+  msgid "Lija Ahmad Khel"
+  msgstr "لجه احمد خیل"
+
+  msgid "Sayedkaram"
+  msgstr "سیدکرم"
+
+  msgid "Shawak"
+  msgstr "شواک"
+
+  msgid "Zadran"
+  msgstr "حّدران"
+
+  msgid "Zurmat"
+  msgstr "زُرمت"
+
+# Distric Panjsher
+  msgid "Onaba(Anawa)"
+  msgstr "عنابه"
+
+  msgid "Bazarak"
+  msgstr "بازارک"
+
+  msgid "Dara"
+  msgstr "دره"
+
+  msgid "Khenj (Hes-e- Awal)"
+  msgstr "خنج (حصه اول)"
+
+  msgid "Paryan"
+  msgstr "پریان"
+
+  msgid "Rukha"
+  msgstr "رُخه"
+
+  msgid "Shutul"
+  msgstr "شُتل"
+
+# Distric Parwan
+  msgid "Bagram"
+  msgstr "بگرام"
+
+  msgid "Charikar"
+  msgstr "چاریکار"
+
+  msgid "Ghorband"
+  msgstr "غوربند"
+
+  msgid "Jabalussaraj"
+  msgstr "جبل السراج"
+
+  msgid "Koh-e- Safi"
+  msgstr "کوه صافی"
+
+  msgid "Salang"
+  msgstr "سالنگ"
+
+  msgid "Saydkhel"
+  msgstr "سیدخیل"
+
+  msgid "Shekhali"
+  msgstr "شیخ علی"
+
+  msgid "Shinwari"
+  msgstr "شینواری"
+
+  msgid "Surkh-e- Parsa"
+  msgstr "سرخ پارسا"
+
+# Distric Samangan
+  msgid "Aybak"
+  msgstr "ایبک"
+
+  msgid "Dara-e- Suf-e- Payin"
+  msgstr "درۀ صوف بالا"
+
+  msgid "Dara-e Suf-e-Bala"
+  msgstr "درۀ صوف پائین"
+
+  msgid "Feroznakhchir"
+  msgstr "فیروز نخچیر"
+
+  msgid "Hazrat-e- Sultan"
+  msgstr "حضرت سلطان"
+
+  msgid "Khuram Wa Sarbagh"
+  msgstr "خرم وسارباغ"
+
+  msgid "Ruy-e-Duab"
+  msgstr "روی دو آب"
+
+# Distric Sare -e Pul
+  msgid "Balkhab"
+  msgstr "بلخاب"
+
+  msgid "Gosfandi"
+  msgstr "گوسفندی"
+
+  msgid "Kohestanat"
+  msgstr "کوهستانات"
+
+  msgid "Sancharak(sangchark)"
+  msgstr "سانچارك"
+
+  msgid "Sayad"
+  msgstr "صیاد"
+
+  msgid "Sozmaqala"
+  msgstr "سوزمه قلعه"
+
+# Distric Takhar
+  msgid "Bangi"
+  msgstr "بنگی"
+
+  msgid "Chahab"
+  msgstr "چاه آب"
+
+  msgid "Chal"
+  msgstr "چال"
+
+  msgid "Darqad"
+  msgstr "درقد"
+
+  msgid "Dasht-e- Qala"
+  msgstr "دشت قلعه"
+
+  msgid "Eshkashem"
+  msgstr "اشکمش"
+
+  msgid "Farkhar"
+  msgstr "فرخار"
+
+  msgid "Hazarsumuch"
+  msgstr "هزار سموچ"
+
+  msgid "Kalafgan"
+  msgstr "کلفگان"
+
+  msgid "Khwajabahawuddin"
+  msgstr "خواجه بهاوالدین"
+
+  msgid "Khwajaghar"
+  msgstr "خواجه غار"
+
+  msgid "Namakab"
+  msgstr "نمک آب"
+
+  msgid "Rostaq"
+  msgstr "رُستاق"
+
+  msgid "Taloqan"
+  msgstr "تالقان"
+
+  msgid "Warsaj"
+  msgstr "ورسج"
+
+  msgid "Yangi Qala"
+  msgstr "ینگی قلعه"
+
+# Distric Uruzgan
+  msgid "Chora"
+  msgstr "چوره"
+
+  msgid "Dehrawud"
+  msgstr "دهراود"
+
+  msgid "Khasuruzgan"
+  msgstr "خاص ارزگان"
+
+  msgid "Shahid-e-Hassas"
+  msgstr "شهید حساس"
+
+  msgid "Tirinkot"
+  msgstr "تیرینکوت"
+
+# Distric Wardak
+  msgid "Chak"
+  msgstr "چک"
+
+  msgid "Daymirdad"
+  msgstr "دایمیرداد"
+
+  msgid "Hesa-e- Awal-e- Behsud"
+  msgstr "حصه اول بهسود"
+
+  msgid "Jalrez"
+  msgstr "جلریز"
+
+  msgid "Markaz-e-Behsud"
+  msgstr "مدکز بهسود"
+
+  msgid "Maydanshahr"
+  msgstr "میدان شهر"
+
+  msgid "Nerkh"
+  msgstr "نرخ"
+
+  msgid "Saydabad"
+  msgstr "سید آباد"
+
+# Distric Zabul
+  msgid "Atghar"
+  msgstr "اتغر"
+
+  msgid "Daychopan"
+  msgstr "دای چوپان"
+
+  msgid "Kakar"
+  msgstr "کاکړ"
+
+  msgid "Mizan"
+  msgstr "میزان"
+
+  msgid "Nawbahar"
+  msgstr "نوبهار"
+
+  msgid "Qalat"
+  msgstr "قلات"
+
+  msgid "Shahjoy"
+  msgstr "شاه جوی"
+
+  msgid "Shomulzay"
+  msgstr "شملزائی"
+
+  msgid "Shinkay"
+  msgstr "شینکی"
+
+  msgid "Tarnak Wa Jaldak"
+  msgstr "ترنک و جلدک"
